<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rbEconomy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_economy" />

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_business" />

        <RadioButton
            android:id="@+id/rbFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_first" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_people"
        android:inputType="number"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_service" />

    <TextView
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />

</LinearLayout>