<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/chkMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_meal" />
    <CheckBox
        android:id="@+id/chkLuggage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_luggage" />

    <CheckBox
        android:id="@+id/chkInsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_insurance" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back" />
</LinearLayout>